# GrowCast

./: .gitignore  README.md  composer.json  package-lock.json  package.json
app/Enums/: WeatherStatus.php
app/Models/: Farm.php  Plant.php  Spray.php  User.php  Weather.php
app/Policies/: DiagnosePolicy.php  FarmPolicy.php  PlantPolicy.php  RolePolicy.php  SprayPolicy.php  UserPolicy.php  WeatherPolicy.php
app/Providers/: AppServiceProvider.php
app/Services/: OpenAIService.php  OpenWeatherService.php
config/: services.php
database/migrations/: 2025_11_23_223552_create_plant_table.php  2025_11_23_223754_create_farm_table.php  2025_11_23_223950_create_weather_table.php  2025_11_23_230158_create_static_permission_table.php  2025_11_26_000813_add_farm_and_recommendation_to_weather_table.php  2025_11_27_010946_add_user_id_to_plant_table.php  2025_11_27_013600_drop_unique_from_farm_coordinates.php  2025_12_29_230306_create_sprays_table.php  2025_12_31_015035_add_diagnose_permissions_to_permissions_table.php
database/seeders/: DatabaseSeeder.php  RolesAndPermissionsSeeder.php
public/: manifest.json  service-worker.js
python-anomaly/: .gitignore  README.md  pyproject.toml
python-anomaly/growcast_anomaly/: __init__.py  cli.py  folder_watch.py  heatmap.py  inference.py  ipc.py  preprocess.py  terminal.py  webcam.py
python-anomaly/models/: ae_meta.json
python-anomaly/scripts/: run_astra.sh
python-anomaly/train/: build_bank.py  calibrate.py  export_onnx.py  feature_model.py  model.py  patchcore_model.py  train_ae.py
routes/: api.php  web.php
(+76 files in other folders)
