[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growcast-anomaly"
version = "0.1.0"
description = "GrowCast plant disease anomaly detector — Conv-Autoencoder, runs on Raspberry Pi via ONNX, integrates with a robot presenter."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "GrowCast Hackathon Team" }]
license = { text = "MIT" }
dependencies = [
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "pillow>=10.0",
    "rich>=13.0",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "torchvision>=0.16",
    "onnx>=1.15",
    "tqdm>=4.66",
]

[project.scripts]
growcast-anomaly = "growcast_anomaly.cli:main"

[tool.setuptools.packages.find]
include = ["growcast_anomaly*"]
exclude = ["train*", "tests*"]
